--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ var _hmt = _hmt || [];
   <h4 class="title">获取B站注册时间</h4>
   <div class="form">
     <div class="get-user-info-link">
-      <a href="https://member.bilibili.com/x2/creative/h5/calendar/card?ts=1576425600&spm_id_from=333.788.b_636f6d6d656e74.6"
+      <a href="https://member.bilibili.com/x2/creative/h5/calendar/event?ts=0"
          rel="noreferrer" target="_blank">①点我获取账号信息</a>
     </div>
     <div class="user-info-input">
